Fix button mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ body {
   } 
 }
 
-.mobile button {
+.mobile a {
   display: block;
   width: 100%;
   padding: 5px;
